removed extra column

--- a/src/table_report.html
+++ b/src/table_report.html
@@ -59,27 +59,6 @@
                         outline: 1px solid white; 
                         padding: 10px;
                     }
-                    .Unity > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(3) {
-                           text-align: left !important;
-                    }
-                    .Data > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(1) {
-                        border-radius: 0 0 0 15px;
-                    }
-                    .Data > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(2) {
-                        border-radius: 0 0 15px 0;
-                    }
-                    .Pure > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(2) > td:nth-child(1) {
-                        border-radius: 0 0 0 15px;
-                    }
-                    .Pure > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(2) > td:nth-child(5) {
-                        border-radius: 0 0 15px 0;
-                    }
-                    .Unity > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(1) {
-                        border-radius: 0 0 0 15px;
-                    }
-                    .Unity > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(3) {
-                        border-radius: 0 0 15px 0;
-                    }
                     div.cclogo{
                         justify-content: center;
                         display: flex;
@@ -96,23 +75,36 @@
                         height: 100%;
                         width: 100%;
                     }
-                    
-                </style>
-                </head>
-                <div class='cclogo'><div class='inner'><img class='logo' src='testdata/cclogo.png'/></div></div><div class = 'Data Domain Capacity Alerts'><h1>Data Domain Capacity Alerts Report</h1><h2>Report Generated: 2024-01-29 13:27:58 EDT</h2><p><table class="dataframe">
+                    .Unity > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(3) {
+                        text-align: left !important;
+                    }
+                    .Data > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(1) {
+                        border-radius: 0 0 15px 15px;
+                    }
+                    .Pure > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(2) > td:nth-child(1) {
+                        border-radius: 0 0 0 15px;
+                    }
+                    .Pure > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(2) > td:nth-child(5) {
+                        border-radius: 0 0 15px 0;
+                    }
+                    .Unity > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(1) {
+                        border-radius: 0 0 0 15px;
+                    }
+                    .Unity > p:nth-child(3) > table:nth-child(1) > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(3) {
+                        border-radius: 0 0 15px 0;
+                    /* === BREAKPOINT MARKER === */
+                    }</style></head><body><div class='cclogo'><div class='inner'><img class='logo' src='testdata/cclogo.png'/></div></div><div class = 'Data Domain Capacity Alerts'><h1>Data Domain Capacity Alerts Report</h1><h2>2024-01-29 | 15:51:24 EDT</h2><p><table class="dataframe">
   <thead>
     <tr style="text-align: right;">
-      <th style = "background-color: #305496;font-family: Century Gothic, sans-serif;font-size: 25px;color: #FFFFFF;text-align: center;border-bottom: white;padding: 15px;width: 721.5px">DD ID</th>
       <th style = "background-color: #305496;font-family: Century Gothic, sans-serif;font-size: 25px;color: #FFFFFF;text-align: center;border-bottom: white;padding: 15px;width: 721.5px">Message</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td style = "background-color: #D9E1F2;font-family: Century Gothic, sans-serif;font-size: 25px;text-align: center;padding: 15px;width: 721.5px"></td>
       <td style = "background-color: #D9E1F2;font-family: Century Gothic, sans-serif;font-size: 25px;text-align: center;padding: 15px;width: 721.5px">No Active Alerts</td>
     </tr>
   </tbody>
-</table></p></div><div class = 'Pure Capacity Alerts Report'><h1>Pure Capacity Alerts Report Report</h1><h2>Report Generated: 2024-01-29 13:27:58 EDT</h2><p><table class="dataframe">
+</table></p></div><div class = 'Pure Capacity Alerts Report'><h1>Pure Capacity Alerts Report</h1><h2>2024-01-29 | 15:51:24 EDT</h2><p><table class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th style = "background-color: #305496;font-family: Century Gothic, sans-serif;font-size: 25px;color: #FFFFFF;text-align: center;border-bottom: white;padding: 15px;width: 721.5px">Pure ID</th>
@@ -138,7 +130,7 @@
       <td style = "background-color: white; color: black;font-family: Century Gothic, sans-serif;font-size: 25px;text-align: center;padding: 15px;width: 721.5px">failure</td>
     </tr>
   </tbody>
-</table></p></div><div class = 'Unity Capacity Alerts Report'><h1>Unity Capacity Alerts Report Report</h1><h2>Report Generated: 2024-01-29 13:27:58 EDT</h2><p><table class="dataframe">
+</table></p></div><div class = 'Unity Capacity Alerts Report'><h1>Unity Capacity Alerts Report</h1><h2>2024-01-29 | 15:51:24 EDT</h2><p><table class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th style = "background-color: #305496;font-family: Century Gothic, sans-serif;font-size: 25px;color: #FFFFFF;text-align: center;border-bottom: white;padding: 15px;width: 721.5px">Unity ID</th>
@@ -153,4 +145,4 @@
       <td style = "background-color: #D9E1F2;font-family: Century Gothic, sans-serif;font-size: 25px;text-align: center;padding: 15px;width: 721.5px">A recommended system software (version 5.3.0.0.5.120) is now available for download. Version 5.3.0.0.5.120 is the latest release. Refer to the 5.3.0 Release Notes on dell.com/support for all new features and known issues addressed.</td>
     </tr>
   </tbody>
-</table></p></div>
+</table></p></div></body></html>
